--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+[] AUTO UPDATES
+[] LOGGING
+
 Documentation:
     [] how to install on deck (with screenshots)
     [] how to build using docker/act
