--- a/TODO
+++ b/TODO
@@ -1,11 +1,9 @@
 [] AUTO UPDATES
     [] make a better endpoint than just using github?
 [] LOGGING
-    [] use LogChannel tscn. get_logs() on dd, and then create a logchannel for each one
-    [] have errors get logged
     [] wrap panics?
     [] wrap text
-    [] stop logs from scrolling back to top on refresh
+    [] allow for real-time logging from stdout/stderr of processes
 [] ADD TO STEAM
     [] "exit and restart steam" that appears and turns red when created
 [] HANGING ON EXIT
@@ -15,16 +13,8 @@
     [] look up how to reset it?
 
 Documentation:
-    [] how to install on deck (with screenshots)
-    [] how to build using docker/act
-    [] prerequisites
     [] make it clear in copy that it works for all SteamOS (and test that)
-
-Logging overhaul:
-    [] switch all providers to take trick id
-    [] make logging system with categorization by LogChannel::TrickID(String) or LogChannel::All
-    [] can TrickID be &'static? it seems like they will always be? we have no need to ever construct a new one at runtime, they always come from outside, right?
-    [] remove old loggers and use new system only
+    [] add usage screenshots to website
 
 Add to steam:
     [] make reboot to game mode only happen in SteamOS (or double-check that it works correctly on Chimera etc, or offer a cmdline flag)
