--- a/TODO
+++ b/TODO
@@ -1,16 +1,5 @@
-[] AUTO UPDATES
-    [] make a better endpoint than just using github?
-[] LOGGING
-    [] wrap panics?
-    [] wrap text
-    [] allow for real-time logging from stdout/stderr of processes
-[] ADD TO STEAM
-    [] "exit and restart steam" that appears and turns red when created
 [] HANGING ON EXIT
     [] investigate why this is happening (figure out a repro case from lemuel's message and check over ssh on deck)
-[] SET SUDO PASSWORD
-    [] use a text popup box to ask for it, if it's not set
-    [] look up how to reset it?
 
 Documentation:
     [] make it clear in copy that it works for all SteamOS (and test that)
@@ -22,11 +11,7 @@ Add to steam:
 
 General:
     [] implement general updates and make a button
-    [] add 2px margin for logs
     [] make the /tmp/decktricks_only_init check fail when not in desktop mode? or handle it better, some way of only having it happen on that very first steam launch? env var?
-    [] switch all variables in bash scripts to lowercase
-    [] try profile lto
-    [] sort tricks alphabetically, make categories
     [] e2e test: use test config, check that pressing enter launches first program
     [] make calls to std::fs test-safe
     [] make decktricks stable installer point to discord or reddit, and beta point to github?
@@ -175,15 +160,8 @@ Network/Updates
             1) if passed, move decktricks to decktricks.bak and decktricks.new to decktricks (use hard links to keep atomicity)
 
 General
-[] unit test actions --json
-[] using new command runner, add unit tests for general, gather, each provider, and top-level calls
-[] remove all todo!, and panic!
-[] implement all not_implemented
-[] switch checks over to https://docs.rs/predicates/latest/predicates/
-    [] use them in a default trait method in TrickProvider?
-[] simple zenity frontend to test gui functionality
 [] implement reinstall for flatpak
-[] test in chimeraos and steamfork
+[] test in chimeraos and steamfork and bazzite
 [] fix up global updates - the logic on which providers run them, and how errors/messages are propagated/printed
 [] Find out PATH on deck, and how to update it if necessary
 
