Fix steamwebhelper bug

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+* Copy
+    * "Decktricks: no more Desktop Mode!"
+
+
 [] Add precommit hook looking for triple X and do not commit
 [] clean up unwraps in src/dispatcher.rs
 [] codemod SpecificActionState into SpecificExecutionContext
